<resources>
    <string name="app_name">Test</string>
    <string name="default_short_text_lorem_ipsum">Lorem ipsum dolor sit amet</string>
    <string name="default_long_text_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="start_app_error">Error while starting app, no credentials founded</string>
    <string name="sign_up_name">Username</string>
    <string name="sign_password">Password</string>
    <string name="sign_title">Sign-Up Process</string>
    <string name="sign_btn_text">Sign-up now</string>
    <string name="default_connection_error">Something is wrong!</string>
    <string name="default_invalid_field">Invalid Info!</string>
    <string name="sign_up_email">Email</string>
    <string name="login_title">Login</string>
    <string name="login_btn_text">Login</string>
    <string name="details_title">User</string>
    <string name="home_title">Users</string>
    <string name="logout_btn">Logout</string>
    <string name="login_error">Invalid credentials</string>
    <string name="sign_up_error">Can\'t create new user. Please check your information</string>
    <string name="invalid_email">Invalid email</string>
    <string name="no_internet">Please, check your internet connecton</string>
</resources>